# product-api/handlers/products.go
@@ -27,12 +27,48 @@ import (
 	"github.com/gorilla/mux"
 )
 
-// A list of products in response
+// A list of products
 // swagger:response productsResponse
 type productsResponse struct {
 	// All products in the system
 	// in:body
 	Body []data.Product
+}
+
+// Data structure representing a single product
+// swagger:response productResponse
+type productResponse struct {
+	// The created product
+	// in: body
+	Body data.Product
+}
+
+// Validation errors as an array of strings
+// swagger:response validationErrorResponse
+type validationErrorResponse struct {
+	// The error message
+	// in: body
+	Body struct {
+		Message string `json:"message"`
+	}
+}
+
+// Generic error message as a string
+// swagger:response errorResponse
+type errorResponse struct {
+	// The error message
+	// in: body
+	Body struct {
+		Message string `json:"message"`
+	}
+}
+
+// swagger:parameters deleteProduct updateProduct
+type productIDParameterWrapper struct {
+	// The id of the product to delete from the data store
+	// in:path
+	// required: true
+	ID int `json:"id"`
 }
 
 type Products struct {
@@ -58,6 +94,14 @@ func (p *Products) GetProducts(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
+// swagger:route POST /products products addProduct
+// Adds a new product
+// responses:
+//   201: productResponse
+//   422: validationErrorResponse
+//   501: errorResponse
+
+// AddProduct adds a product to the data store
 func (p *Products) AddProduct(w http.ResponseWriter, r *http.Request) {
 	p.l.Println("Handle POST Products")
 
@@ -66,6 +110,13 @@ func (p *Products) AddProduct(w http.ResponseWriter, r *http.Request) {
 
 }
 
+// swagger:route PUT /products/{id} products updateProduct
+// Updates an existing product
+// responses:
+//
+//	204: noContent
+//	422: validationErrorResponse
+//	501: errorResponse
 func (p *Products) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	id, err := strconv.Atoi(vars["id"])
@@ -79,6 +130,35 @@ func (p *Products) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	}
 
 	err = data.UpdateProduct(id, product)
+	if err == data.ErrProductNotFound {
+		http.Error(w, "Product not found", http.StatusNotFound)
+		return
+	}
+
+	if err != nil {
+		http.Error(w, "Product not found", http.StatusInternalServerError)
+		return
+	}
+}
+
+// swagger:route DELETE /products/{id} products deleteProduct
+// Deletes a product
+// responses:
+//  204: noContent
+//	501: errorResponse
+
+// DeleteProduct deletes a product from the data store
+func (p *Products) DeleteProduct(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	id, err := strconv.Atoi(vars["id"])
+	p.l.Println("Handle DELETE Product", id)
+
+	if err != nil {
+		http.Error(w, "Unable to convert id", http.StatusBadRequest)
+		return
+	}
+
+	err = data.DeleteProduct(id)
 	if err == data.ErrProductNotFound {
 		http.Error(w, "Product not found", http.StatusNotFound)
 		return
